# FreshDataPlatform

./: .env.template  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  GIT_SECURITY_CHECKLIST.md  Makefile  README.md  README_source_sp1.md  SECURITY.md  docker-compose.backup.yml  docker-compose.k8s.yml  docker-compose.yml  pyproject.toml  setup.cfg  sso-test-inventory.md  sso-test-report.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-please-config.json
airflow/: Dockerfile  webserver_config.py
dags/: _template_dag.py  datahub_governance_sync.py  job_market_nl_dag.py  source_sp1_vacatures_ingestion.py
dbt_parallel/: AGENTS.md  README.md  TRANSFORMATION_MAPPING.md  dbt_project.yml  profiles.yml
deploy/: AGENTS.md  README.md  RUNBOOK.md
docs/: INGESTION_GUIDE.md  architecture.mmd  e2e_data_platform_testing.md
frontend/: .eslintrc.cjs  AGENTS.md  Dockerfile  Dockerfile.k8s  index.html  package-lock.json  package.json  vite.config.js
guides/: architecture.md  data_quality_framework.md  setup_o365_graph_api.md
k8s/: AGENTS.md  README.md
notebooks/: Dockerfile  README.md  quickstart.ipynb  requirements.txt
ops/: alerting_config.yaml
reports/: coverage.xml  junit.xml
schema/: AGENTS.md  README.md  data_quality_rules.yaml  glossary.yaml  metrics.yaml  standards.md  warehouse.dbml
scripts/: AGENTS.md  README.md  aks_down.sh  aks_up.sh  bootstrap_all.sh  clean_data.py  create_governance_defs.py  datahub_client.py  ensure_job_market_source_tables.py  export_all_to_warehouse.py  generate_dummy_data.py  ingest_warehouse.py  init_warehouse_schema.sql  k8s_dev_up.sh  (+26 more)
(+408 files in other folders)
